# cangaroo

./: CMakeLists.txt
canifconfig/: CMakeLists.txt
src/: CMakeLists.txt  mainwindow.cpp
src/core/: Backend.cpp  CanMessage.cpp  CanTrace.cpp  CanTrace.h
src/driver/: GenericCanSetupPage.cpp
src/parser/dbc/: DbcParser.cpp
src/window/TraceWindow/: BaseTraceViewModel.cpp  TraceWindow.cpp
